--- a/src/component/testArea/test.module.less
+++ b/src/component/testArea/test.module.less
@@ -4,11 +4,11 @@
 * @date: 2022-06-13 15:31
 * @description：试验田的样式
 */
-.container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.container {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 1em;
+  padding: 2em;
   align-items: center;
-  height: 100vh;
 }
 
