--- a/src/component/baseUI/hnsButton/hnsButton.module.less
+++ b/src/component/baseUI/hnsButton/hnsButton.module.less
@@ -16,6 +16,7 @@
   animation: none;
 }
 
+
 .HNSButton:focus {
   outline: @primary-color;
 }
@@ -31,9 +32,23 @@
   color: @text-color;
 }
 
+.default:disabled {
+  background: white;
+  border: lighten(@border-color-base, 20%) 1px solid;
+  border-radius: @border-radius-base;
+  color: lighten(@text-color, 20%);
+  cursor: not-allowed;
+}
+
 .default:hover {
   border: @primary-color 1px solid;
   color: @primary-color;
+}
+
+.default:hover:disabled {
+  border: lighten(@primary-color, 20%) 1px solid;
+  color: lighten(@primary-color, 20%);
+  cursor: not-allowed;
 }
 
 .primary {
@@ -45,6 +60,19 @@
 
 .primary:hover {
   background: lighten(@primary-color, 10%);
+}
+
+.primary:disabled {
+  background: lighten(@primary-color, 20%);
+  color: white;
+  border-radius: @border-radius-base;
+  border: none;
+  cursor: not-allowed;
+}
+
+.primary:hover:disabled {
+  background: lighten(@primary-color, 20%);
+  cursor: not-allowed;
 }
 
 // 点击后阴影扩散的动画
