feat:新增HNS-Avatar，HNS-Search组件

--- a/src/component/baseUI/hnsButton/hnsButton.module.less
+++ b/src/component/baseUI/hnsButton/hnsButton.module.less
@@ -9,6 +9,9 @@
   cursor: pointer;
   font-size: @font-size-base;
   transition: ease-in-out 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 // active 的作用是：当点击频率很高，动画可能还未结束，这个时候需要清除正在播放的动画，重新执行，动画更流畅
