--- a/public/baseUI.less
+++ b/public/baseUI.less
@@ -25,6 +25,10 @@
 @input-min-width: 20rem; // 输入框最小宽度
 @input-max-width: 30rem; // 输入框最大宽度
 @animation-bezier-base: cubic-bezier(0.64, 0, 0.2, 1); // 贝塞尔曲线
+@border-box-shadow: 0 0 0.3rem 0 lighten(@primary-color, 15%); // 输入框聚焦边缘高亮
+@border-box-error-shadow: 0 0 0.3rem 0 lighten(@primary-color, 15%); // 输入框错误边缘高亮
+@border-box-error-shadow: 0 0 0.3rem 0 lighten(@error-color, 15%); // 输入框错误边缘高亮
+@border-box-success-shadow: 0 0 0.3rem 0 lighten(@success-color, 15%); // 输入框正确边缘高亮
 
 body {
   font-size: 16px;
