--- a/src/component/baseUI/hnsSearch/hnsSearch.module.less
+++ b/src/component/baseUI/hnsSearch/hnsSearch.module.less
@@ -10,15 +10,16 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
-  height: 4em;
+  height: 3em;
   padding-left: @text-padding;
   min-width: @input-min-width;
   max-width: @input-max-width;
 
 
   input {
+    transition: ease-in-out 0.3s;
     min-width: 80%;
-    border: lighten(@border-color-base, 20%) 1.5px solid;
+    border: @border-color-base 1.5px solid;
     border-right: none;
     border-radius: @border-radius-base 0 0 @border-radius-base;
     padding-left: 1em;
@@ -26,9 +27,11 @@
   }
 
   input:focus {
+    transition: ease-in-out 0.3s;
     outline: none;
     border: @primary-color 1.5px solid;
     border-right: none;
+
   }
 
   .searchBtn {
