--- a/src/component/baseUI/hnsInput/hnsInput.module.less
+++ b/src/component/baseUI/hnsInput/hnsInput.module.less
@@ -19,6 +19,7 @@
   padding: @text-padding*0.5 @text-padding;
   min-width: @input-min-width;
   max-width: @input-max-width;
+  min-height: 3rem;
   transition: ease-in-out 0.3s;
 }
 
