--- a/src/component/testArea/test.module.less
+++ b/src/component/testArea/test.module.less
@@ -6,9 +6,10 @@
 */
 .container {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 1em;
   padding: 2em;
   align-items: center;
 }
+
 
