fix:部分代码优化逻辑

--- a/src/component/baseUI/hnsCheckBox/hnsCheckBox.module.less
+++ b/src/component/baseUI/hnsCheckBox/hnsCheckBox.module.less
@@ -40,7 +40,7 @@
 
   input[type="checkbox"] {
     cursor: pointer;
-    border: 0.1rem solid lighten(@text-color, 30%);
+    border: 0.1rem solid @primary-color;
     border-radius: @border-radius-base;
     color: white;
   }
