--- a/src/component/baseUI/hnsCheckBox/hnsCheckBox.module.less
+++ b/src/component/baseUI/hnsCheckBox/hnsCheckBox.module.less
@@ -33,7 +33,7 @@
     background: @primary-color;
     color: white;
     border: 1px solid @primary-color;
-    animation-name: @zoom-Anime, @border-diffuse-Anime;
+    animation-name: @flexible-Anime, @border-diffuse-Anime;
     transition: ease-in-out;
     animation-duration: 0.5s;
   }
