feat:介绍组件间的通信

--- a/src/component/baseUI/hnsInput/hnsInput.module.less
+++ b/src/component/baseUI/hnsInput/hnsInput.module.less
@@ -8,7 +8,7 @@
 .layOutControl {
   display: flex;
   flex-direction: column;
-  min-height: 123px;
+  min-height: 7.7rem;
 }
 
 .container {
@@ -19,7 +19,8 @@
   padding: @text-padding*0.5 @text-padding;
   min-width: @input-min-width;
   max-width: @input-max-width;
-  min-height: 3rem;
+  height: 3.5rem;
+  width: 22rem;
   transition: ease-in-out 0.3s;
 }
 
