--- a/src/component/pages/miLuoExample/miLuoExample.module.less
+++ b/src/component/pages/miLuoExample/miLuoExample.module.less
@@ -1,13 +1,28 @@
 /**
 * @name: miLuoExample.module.less
 * @author: 米洛
-* @date: 2022-07-03 16:29
+* @date: 2022-07-10 17:05
 * @description：该文件的描述
 */
 
 .title {
-  color: @warning-color;
+  color: red;
 }
-.titlePrimary {
-  color: @primary-color;
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
+.button1 {
+  background: red;
+  cursor: pointer;
+  border: none;
+}
+
+.button2 {
+  background: blue;
 }
