--- a/src/component/pages/graniexample/Graniexample.module.less
+++ b/src/component/pages/graniexample/Graniexample.module.less
@@ -1,5 +1,10 @@
 .title{
 
-  color:red;
+  color:blue;
 
 }
+.container {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   gap: 10px;
+ }
