--- a/src/component/baseUI/hnsModel/hnsModel.module.less
+++ b/src/component/baseUI/hnsModel/hnsModel.module.less
@@ -33,8 +33,13 @@
   margin-bottom: 0.5rem;
   border-bottom: fade(@text-color, 5%) 1px solid;
   padding: 0 0 0.8rem 0;
+  position: relative;
 }
+.iconClose{
+  position: absolute;
+  right: 0;
 
+}
 .title {
   font-weight: bold;
 }
