--- a/src/component/pages/graniexample/Graniexample.module.less
+++ b/src/component/pages/graniexample/Graniexample.module.less
@@ -1,10 +1,15 @@
-.title{
-
-  color:blue;
-
+.title {
+  color: #61dafb;
+  background: #282c34;
 }
+
+.titlePrimary{
+  color: #282c34;
+  background: #61dafb;
+}
+
 .container {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   gap: 10px;
- }
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
