feat:新增 HNS-Navigate 导航栏

--- a/src/component/testArea/test.module.less
+++ b/src/component/testArea/test.module.less
@@ -5,11 +5,11 @@
 * @description：试验田的样式
 */
 .container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1em;
-  padding: 2em;
-  align-items: center;
+  //display: grid;
+  //grid-template-columns: repeat(4, 1fr);
+  //gap: 1em;
+  ////padding: 2em;
+  //align-items: center;
 }
 
 
