--- a/src/component/testArea/test.module.less
+++ b/src/component/testArea/test.module.less
@@ -8,7 +8,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1em;
-  padding: 2em;
+  //padding: 2em;
   align-items: center;
 }
 
