feat 新增sanyecaoΩ提交模块

--- a/src/component/pages/sanyecaoExample/SanyecaoExample.module.less
+++ b/src/component/pages/sanyecaoExample/SanyecaoExample.module.less
@@ -1,8 +1,7 @@
-
-.container{
-        display: flex;
-}
-.search{
-        color:aqua;
-        width:auto;
-}
+.container {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1em;
+        padding: 2em;
+        align-items: center;
+      }
