feat:新增HNS-Switch-Navigate

--- a/src/icon/iconAll/iconAll.module.less
+++ b/src/icon/iconAll/iconAll.module.less
@@ -5,9 +5,12 @@
 * @description：搜索样式
 */
 
-.icon{
-  path{
-    transition: ease-in-out 0.3s;
-    stroke: lighten(@text-color, 60%);
+.icon {
+  transform: scale(0.5);
+  path {
+    stroke: @text-color;
+    fill: transparent;
+    stroke-width: 4px;
   }
 }
+
