--- a/public/baseUI.less
+++ b/public/baseUI.less
@@ -13,7 +13,7 @@
 @font-size-base: 1rem; // 主字号
 @font-size-secondary: 0.875rem; // 次级字号
 @heading-color: rgba(0, 0, 0, 0.85); // 标题色
-@text-color: rgba(0, 0, 0, 0.65); // 主文本色
+@text-color: #333; // 主文本色
 @text-color-secondary: rgba(0, 0, 0, 0.45); // 次文本色
 @disabled-color: rgba(0, 0, 0, 0.25); // 失效色
 @border-radius-base: 0.4rem; // 组件/浮层圆角
