--- a/src/component/baseUI/hnsSwitchNavigate/hnsSwitchNavigate.module.less
+++ b/src/component/baseUI/hnsSwitchNavigate/hnsSwitchNavigate.module.less
@@ -23,7 +23,7 @@
   position: relative;
   background: white;
   padding: 0.5rem 2rem;
-  border-bottom: fade(@text-color,20%) 0.5px solid;
+  border-bottom: fade(@text-color, 20%) 0.5px solid;
 }
 
 .item {
@@ -31,7 +31,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 1.2vw;
+  margin-left: 4vw;
 }
 
 .itemActive {
@@ -44,6 +44,11 @@
   }
 
 }
+
+.title {
+  transform: translateX(-0.5vw);
+}
+
 
 @keyframes textFade {
   0% {
