--- a/src/icon/iconAll/iconAll.module.less
+++ b/src/icon/iconAll/iconAll.module.less
@@ -6,7 +6,7 @@
 */
 
 .icon {
-  transform: scale(0.5);
+  transform: scale(0.5) translateX(-1vw);
   path {
     stroke: @text-color;
     fill: transparent;
