--- a/src/component/baseUI/hnsNavigate/hnsNavigate.module.less
+++ b/src/component/baseUI/hnsNavigate/hnsNavigate.module.less
@@ -173,6 +173,7 @@
 
 @keyframes iconDownOpenAnime {
   0% {
+
   }
   100% {
     transform: rotate(180deg);
@@ -182,6 +183,21 @@
     }
   }
 }
+
+
+@keyframes iconDownCloseAnime {
+  0% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(0deg);
+
+    path {
+      stroke: @primary-color !important;
+    }
+  }
+}
+
 
 
 @keyframes fadeEffect {
