exc:回到顶部组件练习

--- a/public/baseUI.less
+++ b/public/baseUI.less
@@ -5,7 +5,7 @@
 * @description：HNS UI 组件库通用样式
 */
 
-@primary-color: #1890ff; // 全局主色
+@primary-color: #ff1856; // 全局主色
 @link-color: #1890ff; // 链接色
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
@@ -33,7 +33,7 @@
 @transform-Anime: transForm;
 body {
   font-size: 16px;
-  min-width: 68.75rem;
+  min-width: 68.75rem !important;
   background: lighten(@border-color-base,50%);
 }
 
