--- a/src/component/baseUI/hnsSearch/hnsSearch.module.less
+++ b/src/component/baseUI/hnsSearch/hnsSearch.module.less
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 100%;
   height: 3rem;
   padding-left: @text-padding;
   min-width: @input-min-width;
@@ -26,6 +25,7 @@
     border: none;
     padding-left: 1em;
     height: 100%;
+    background: transparent;
   }
 }
 .icon{
