--- a/src/component/baseUI/hnsSwitchNavigate/hnsSwitchNavigate.module.less
+++ b/src/component/baseUI/hnsSwitchNavigate/hnsSwitchNavigate.module.less
@@ -32,6 +32,7 @@
   justify-content: space-between;
   align-items: center;
   margin-left: 4vw;
+  transform: translateX(-25%);
 }
 
 .itemActive {
@@ -40,7 +41,7 @@
 
   path {
     animation: ease iconFade 0.3s;
-    stroke: @primary-color;
+    stroke: @primary-color !important;
   }
 
 }
