example:深度优先遍历

--- a/src/component/testArea/test.module.less
+++ b/src/component/testArea/test.module.less
@@ -10,6 +10,24 @@
   //gap: 1em;
   ////padding: 2em;
   //align-items: center;
+
 }
 
-
+//.listContainer{
+//  margin: 1.5rem 0;
+//}
+//.category{
+//  padding: 0.5rem;
+//  background: @primary-color;
+//  border-radius: @border-radius-base;
+//  color: white;
+//}
+//
+//.bungumiName{
+//  font-weight: bold;
+//}
+//
+//.items{
+//  margin: 1rem 0;
+//
+//}
