--- a/src/component/baseUI/hnsButton/hnsButton.module.less
+++ b/src/component/baseUI/hnsButton/hnsButton.module.less
@@ -37,9 +37,9 @@
 
 .default:disabled {
   background: white;
-  border: lighten(@border-color-base, 20%) 1px solid;
+  border: fade(@border-color-base, 30%) 1px solid;
   border-radius: @border-radius-base;
-  color: lighten(@text-color, 20%);
+  color: fade(@text-color, 50%);
   cursor: not-allowed;
 }
 
