--- a/public/baseUI.less
+++ b/public/baseUI.less
@@ -9,7 +9,7 @@
 @link-color: #1890ff; // 链接色
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
-@error-color: #f5222d; // 错误色
+@error-color: #f34548; // 错误色
 @font-size-base: 1rem; // 主字号
 @font-size-secondary: 0.875rem; // 次级字号
 @heading-color: rgba(0, 0, 0, 0.85); // 标题色
