--- a/src/component/pages/miLuoExample/miLuoExample.module.less
+++ b/src/component/pages/miLuoExample/miLuoExample.module.less
@@ -10,28 +10,58 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-}
 
-.button {
-  border: none;
-  cursor: pointer;
-  background: @disabled-color;
-  border-radius: 2rem;
-  padding: 0.5rem 2rem;
-  margin: auto 0.5rem;
-  color: white;
-}
-
-.isActive {
-  background: lighten(@primary-color, 10%);
-  animation: showFade ease 0.3s;
-}
-
-@keyframes showFade {
-  0% {
-    background: @disabled-color;
+  ul {
+    display: flex;
+    flex-direction: column;
+    width: 45rem;
+    gap: 0.5rem;
+    background: white;
+    border-radius: @border-radius-base;
+    padding: 3rem;
   }
-  100% {
-    background: lighten(@primary-color, 10%);
+
+  li {
+    box-sizing: border-box;
+    list-style: none;
+    cursor: pointer;
+    display: flex;
+    padding: 1rem;
+    justify-content: space-between;
+    align-items: center;
+    border: fade(@text-color, 5%) 1px solid;
+    border-radius: @border-radius-base;
+  }
+
+  .delete {
+    background: @error-color;
+    border: none;
+    border-radius: @border-radius-base;
+    transition: all ease 0.3s;
+
+    &:hover {
+      cursor: pointer;
+      background: fade(@error-color, 80%);
+      transition: all ease 0.3s;
+    }
+  }
+
+  .toolBar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 1rem;
+  }
+
+  input {
+    box-sizing: border-box;
+    padding: 0.5rem;
+    border-radius: @border-radius-base;
+    border: fade(@text-color, 50%) 1px solid;
+
+    &:focus {
+      outline: @primary-color 1.5px solid;
+      border: transparent 1.5px solid;
+    }
   }
 }
