--- a/public/baseUI.less
+++ b/public/baseUI.less
@@ -20,6 +20,7 @@
 @border-color-base: rgba(75, 75, 75, 0.29); // 边框色
 @box-shadow-base: 0 0.3rem 0.6rem -0.4rem rgba(0, 0, 0, 0.12), 0 0.6rem 1.6rem 0 rgba(0, 0, 0, 0.08),
 0 0.9rem 2.8rem 0.8rem rgba(0, 0, 0, 0.05); // 浮层阴影
+@padding-xs: 8px;
 @text-padding: 0.5rem; //边框内部文字间距
 @label-margin: 0.4rem; // 输入框标签外边距
 @input-min-width: 20rem; // 输入框最小宽度
@@ -34,7 +35,7 @@
 body {
   font-size: 16px;
   min-width: 68.75rem !important;
-  background: lighten(@border-color-base,50%);
+  background: lighten(@border-color-base, 50%);
 }
 
 // 点击后阴影扩散的动画
