--- a/src/component/module/appBar/appBar.module.less
+++ b/src/component/module/appBar/appBar.module.less
@@ -125,7 +125,7 @@
     }
 
     @media screen and (max-width: 1024px) {
-      overflow: scroll;
+      overflow-x: scroll;
       .item {
         min-width: 6rem;
         justify-content: center;
